Fix spacing between sections in ngUI page

--- a/src/app/projects/components/ng-ui/ng-ui.component.scss
+++ b/src/app/projects/components/ng-ui/ng-ui.component.scss
@@ -2,16 +2,17 @@ section {
   width: 100%;
   display: flex;
   flex-direction: column;
-  gap: 56px;
+  gap: 64px;
   justify-content: center;
 
   .app {
     overflow: hidden;
-    width: 100%;
+
     padding: 0px 8px 8px 8px;
     border-radius: 16px;
     background-color: var(--modalBgContent);
     box-shadow: 0px 50px 100px -20px rgba(0, 0, 0, 0.15);
+    margin: auto;
 
     .header {
       display: flex;
@@ -38,7 +39,7 @@ section {
         }
       }
 
-      .figma {
+      .figma-logo {
         display: flex;
         align-items: center;
         padding: 0 0.5rem;
@@ -51,7 +52,7 @@ section {
 
     img {
       width: 100%;
-      height: 100%;
+
       object-fit: cover;
       overflow: hidden;
     }
@@ -62,10 +63,18 @@ section {
       grid-template-columns: repeat(3, 300px);
       justify-content: center;
       gap: 24px;
-      padding: 3rem 0;
+      padding: 8rem 0;
       border-radius: 8px;
       overflow-x: scroll;
     }
+  }
+
+  .live {
+    width: 100%;
+  }
+  .figma-shell {
+    width: 100%;
+    margin: auto;
   }
 
   .description {
@@ -73,7 +82,6 @@ section {
 
     .preview {
       margin: 32px 0px;
-      // padding: 8px 16px;
       border-radius: 16px;
       display: flex;
       align-items: center;
@@ -98,6 +106,34 @@ section {
           width: 100%;
         }
       }
+    }
+  }
+}
+
+.figma {
+  gap: 24px;
+  padding: 6rem 0;
+}
+
+@media (min-width: 640px) {
+  section {
+    .description {
+      margin: auto;
+
+      .preview {
+        justify-content: center;
+      }
+    }
+
+    .live {
+      width: 60%;
+    }
+    .figma-shell {
+      width: 80%;
+    }
+
+    h4 {
+      text-align: center;
     }
   }
 }
